# the-airlock

./: .gitignore  AIRLOCK_V4_FORTRESS_ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  CLAUDE_CODE_SETUP_GUIDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-hardware.txt  requirements.txt
.github/workflows/: test.yml
app/: __init__.py  config.py  daemon.py  main.py  processing_pipeline.py
app/hardware/: __init__.py  audio_feedback.py  button_handler.py  led_controller.py  oled_display.py
app/security/: __init__.py  archive_handler.py  cdr_engine.py  file_validator.py  mount_manager.py  policy_engine.py  report_generator.py  scanner.py  usb_guard.py
app/updater/: __init__.py  offline_updater.py
app/utils/: __init__.py  crypto.py  helper_client.py  logger.py  privileged_helper.py
config/: airlock.yaml
docs/: KEY_MANAGEMENT.md  OPERATIONS_GUIDE.md  THREAT_MODEL.md
docs/release/: RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SHA256SUMS.txt  github_setup_commands.sh
scripts/: airlock-deauth.sh  benchmark.py  generate_keys.sh  generate_sounds.py  setup.sh
systemd/: airlock-helper.service  airlock.service
tests/: self_test.py  test_archive_handler.py  test_cdr_engine.py  test_file_validator.py  test_key_separation.py  test_mount_permissions.py  test_offline_updater_integrity.py  test_policy_engine.py  test_report_signature.py  test_scanner.py  test_usb_guard.py
